# friendli-model-optimizer

./: .gitignore  README.md  pyproject.toml  tox.ini
.github/workflows/: ci.yaml
scripts/: copyright_header.py
src/fmo/: __init__.py  logging.py  main.py  main_test.py
src/fmo/utils/: __init__.py  dataset.py  format.py  version.py
